zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_scroll_to_bottom_action.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{}\", last_snapshot)"
---
00 (C): ┌ Pane #1 ─── SCROLL:  0/13 | able-ant ┐┌ Pane #2 ───────────────── active-ant ┐
01 (C): │fill pane up with something 13        ││                                      │
02 (C): │fill pane up with something 14        ││                                      │
03 (C): │fill pane up with something 15        ││                                      │
04 (C): │fill pane up with something 16        ││                                      │
05 (C): │fill pane up with something 17        ││                                      │
06 (C): │fill pane up with something 18        ││                                      │
07 (C): │fill pane up with something 19        ││                                      │
08 (C): │                                      ││                                      │
09 (C): └──────────────────────────────────────┘└──────────────────────────────────────┘
